--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-freetype-rs = "0.32.0"
-sdl2 = { version = "0.35.2", features = ["ttf"] }
+freetype-rs = "0.38.0"
+sdl2 = { version = "0.37.0" }
+glutin = "0.32.3"
